# hackerbot-python-package

./: .gitignore  LICENSE  README.md  main.py  main_controller.py  programmed_controller.py  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
bobby/: main.py  navigate_robot.py  parse_map.py  test.py
examples/: hackerhacker.py  keyboard_teleop.py  lazy_susan.py  playground.py  test_helper.py  text_to_navigation.py
examples/keyboard_teleop_examples/: AI_ELITE_teleop.py  AI_PRO_teleop.py  arm_teleop.py  base_teleop.py  head_teleop.py
examples/teleop/: arm_base_keyboard_teleop.py  arm_keyboard_teleop.py  base_keyboard_teleop.py
hackerbot_controller.egg-info/: SOURCES.txt
hackerbot_helper/: main_controller.py  programmed_controller.py
hackerbot_helper.egg-info/: PKG-INFO
hackerbot_modules/: pyproject.toml  setup.py
hackerbot_modules/hackerbot_controller.egg-info/: PKG-INFO  top_level.txt
hackerbot_modules/hackerbot_helper/: __init__.py  main_controller.py  programmed_controller.py
hackerbot_modules/hackerbot_helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hackerbot_modules/test/: test_helper.py  test_main_controller.py  test_programmed_controller.py
hackerbot_modules/tests/: test_main_controller.py  test_programmed_controller.py
src/: pyproject.toml
src/hackerbot/: __init__.py  core.py
src/hackerbot/arm/: __init__.py  gripper.py
src/hackerbot/base/: __init__.py  maps.py  speech.py
src/hackerbot/examples/: lazy_susan.py
src/hackerbot/examples/keyboard_teleop_examples/: AI_ELITE_teleop.py  AI_PRO_teleop.py  arm_teleop.py  base_teleop.py  head_teleop.py
src/hackerbot/head/: __init__.py  eyes.py
src/hackerbot/head/models/: en_GB-semaine-medium.onnx.json
src/hackerbot/utils/: hackerbot_helper.py  programmed_controller.py  serial_helper.py  tts_helper.py
tests/: parse_json_from_serial.py  playground.py  test_programmed_controller.py  test_serial_helper.py
tests/integration_tests/: test_arm.py  test_base.py  test_combines.py  test_core.py  test_head.py  test_maps.py
tests/unit_tests/: test_arm.py  test_base.py  test_core.py  test_hackerbot_helper.py  test_head.py  test_maps.py  test_serial_helper.py  test_tts_helper.py
