################################################################################
# Copyright (c) 2025 Hackerbot Industries LLC
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.
#
# Created By: Allen Chien
# Created:    April 2025
# Updated:    2025.05.12
#
# This module contains the setup details for the hackerbot python package.
#
# Special thanks to the following for their code contributions to this codebase:
# Allen Chien - https://github.com/AllenChienXXX
################################################################################


[project]
name = "hackerbot"
version = "0.6.0"
description = "This module contains the setup for the hackerbot python package."
authors = [
  { name = "Allen Chien", email = "allen@hackerbot.co" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyserial",
  "pytest",
  "piper-tts",
  "sounddevice",
  "pyaudio",
]

[project.urls]
Homepage = "https://github.com/hackerbotindustries/hackerbot-python-package"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
