################################################################################
# Copyright (c) 2025 Hackerbot Industries LLC
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.
#
# Created By: Allen Chien
# Created:    April 2025
# Updated:    2025.04.01
#
# This module contains the setup for the hackerbot_helper package.
#
# Special thanks to the following for their code contributions to this codebase:
# Allen Chien - https://github.com/AllenChienXXX
################################################################################


[project]
name = "hackerbot_helper"
version = "0.1"
description = "This module contains the setup for the hackerbot_helper package."
authors = [
  { name = "Allen Chien", email = "achien4@wisc.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pyserial"
]

[project.urls]
Homepage = "https://github.com/AllenChienXXX"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
